--- a/.github/workflows/base.yml
+++ b/.github/workflows/base.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   ubuntu_base_latest_deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Copy Repo Files
         uses: actions/checkout@master
@@ -41,7 +41,7 @@ jobs:
           cache-to: type=gha,mode=max
 
   ubuntu_base_deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       matrix:
         release: [jammy, focal, noble]
@@ -75,7 +75,7 @@ jobs:
           cache-to: type=gha,mode=max
 
   debian_base_deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       matrix:
         release: [bullseye, sid]
