--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -9,7 +9,7 @@ metadata:
   labels:
     tier: "2"
   annotations:
-    github.com/project-slug: https://github.com/webgrip/docker-github-actions-runner
+    github.com/project-slug: webgrip/docker-github-actions-runner
     backstage.io/techdocs-ref: dir:.
     backstage.io/kubernetes-label-selector: 'app.kubernetes.io/name=webhook-initializer'
   tags:
