Added system too

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -29,3 +29,28 @@ spec:
   lifecycle: production
   owner: group:webgrip/infrastructure
   system: ci-system
+---
+apiVersion: backstage.io/v1alpha1
+kind: System
+metadata:
+  name: ci-system
+  namespace: webgrip
+  title: CI/CD System
+  description: |
+    The CI system runs continuous integration pipelines.
+  labels:
+    tier: "2"
+  annotations:
+    backstage.io/techdocs-ref: dir:.
+  tags:
+    - ci
+    - automation
+  links:
+    - url: https://monitoring-platform.test
+      title: Development URL
+      icon: dashboard
+      type: website
+spec:
+  owner: group:webgrip/infrastructure
+  domain: webgrip/operations-domain
+  type: infrastructure
