--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   create-release:
     name: Create Release
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v4
@@ -27,7 +27,7 @@ jobs:
         prerelease: false
 
   ubuntu_latest_tag:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: create-release
     steps:
       - name: Copy Repo Files
@@ -66,7 +66,7 @@ jobs:
           cache-to: type=gha,mode=max
 
   ubuntu_tag:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: create-release
     strategy:
       matrix:
@@ -109,7 +109,7 @@ jobs:
           cache-to: type=gha,mode=max
 
   debian_tag:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         release: [bullseye, sid]
